[tool.poetry]
name = "simple-smart-meter-texas"
version = "0.1.0"
description = ""
authors = ["Sam Rodkey <sam@samrodkey.com>"]
readme = "README.md"
packages = [{include = "simple_smart_meter_texas"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
pytz = "^2023.3"
pandas = "^2.0.1"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"
pandas = "^2.0.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
urllib3 = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
